<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivity"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:id="@+id/scrollViewDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/mTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/colorTextDetail"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/backDrop_image"
                android:layout_width="280dp"
                android:layout_height="180dp"
                android:layout_gravity="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorActivity"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title_detail_sinopse"
                    android:textColor="@color/colorTextDetail"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/mSinopse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:textColor="@color/colorTextDetail" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/title_vote_average"
                    android:textColor="@color/colorTextDetail"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/mVoteAverage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/colorTextDetail" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text="@string/title_release_date"
                    android:textColor="@color/colorTextDetail"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/mReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:text=""
                    android:textColor="@color/colorTextDetail" />

                <TextView android:id="@+id/titleEmpty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/title_review_movies"
                    android:textColor="@color/colorTextDetail"
                    android:textStyle="bold"/>

                <TextView android:id="@+id/emptyReviewMsg"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:visibility="invisible"
                    android:padding="2dp"
                    android:text="@string/msg_empty_review"
                    android:textColor="@color/colorTextDetail"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerview_review_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="invisible"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar android:id="@+id/dProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_gravity="center"/>

</LinearLayout>
